--- a/gameplay/build.gradle
+++ b/gameplay/build.gradle
@@ -1,10 +1,11 @@
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.data:spring-data-jpa"
+    implementation "org.springframework.security:spring-security-core"
 
-    testImplementation "org.testng:testng:7.7.0"
+    testImplementation "org.testng:testng:${testng_version}"
 
     implementation project(":board-data")
     implementation project(":game-data")
-    implementation project(":user-data")
+    implementation project(":player-data")
 }
