--- a/player-data/build.gradle
+++ b/player-data/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation "jakarta.persistence:jakarta.persistence-api"
     implementation "org.springframework.data:spring-data-jpa"
+    implementation "org.springframework.security:spring-security-core"
 }
