--- a/tictactoe-service/build.gradle
+++ b/tictactoe-service/build.gradle
@@ -8,10 +8,16 @@ application {
 dependencies {
     implementation "com.h2database:h2"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework:spring-websocket"
     implementation "org.springframework:spring-messaging"
 
+    implementation project(":board-data")
     implementation project(":controller")
+    implementation project(":game-data")
+    implementation project(":gameplay")
+    implementation project(":manage-account")
+    implementation project(":player-data")
 }
